Remove .enum from enums

--- a/tests/Draw/draw.htm
+++ b/tests/Draw/draw.htm
@@ -5,7 +5,7 @@
         jsOMS.Modules = {};
         jsOMS.Modules.Draw = {};
     </script>
-    <script src="../../../../Modules/Draw/Models/DrawType.enum.js"></script>
+    <script src="../../../../Modules/Draw/Models/DrawType.js"></script>
     <script src="../../../../Modules/Draw/Models/Editor.js"></script>
     <script>
         if (document.readyState === 'complete' || document.readyState === 'loaded' || document.readyState === 'interactive') {
